--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bcrypt": "^1.0.3",
     "express": "^4.16.2",
     "os": "^0.1.1",
-    "owasp-password-strength-test": "^1.3.0"
+    "owasp-password-strength-test": "^1.3.0",
+    "swagger-ui-express": "^3.0.10"
   },
   "devDependencies": {
     "chai": "^4.1.2",
